Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <ul>
 <li>
-<a href="https://github.com/agemooij/riak-scala-client">riak-scala-client</a> - A non-blocking Scala client library for the <a href="http://basho.com/products/riak-overview/">Riak</a> key/value store</li>
+<a href="http://riak.scalapenos.com/">riak-scala-client</a> - A fast, non-blocking Scala client library for the <a href="http://basho.com/products/riak-overview/">Riak</a> key/value store</li>
 <li>
 <a href="https://github.com/agemooij/rhinos">rhinos</a> - A simple Scala wrapper around the Rhino Javascript runtime. This project is no longer actively maintained (unless by popular demand)</li>
 </ul>
