--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 {% for post in site.posts %}
 <div class="row">
   <div class="span5">
-    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <h3><a href="{{ post.url }}">{{ post.title | upcase }}</a></h3>
     <p>{{ post.date | date: "%A %B %d, %Y" }}</p>
   </div>
   <div class="span7">
